# Template.axera

./: CMakeLists.txt  LICENSE  README.md  build_ax620q.sh  build_ax630c.sh  build_ax650.sh
cmake/: msp_dependencies.cmake
src/api/: ax_template_api.cpp  ax_template_api.h
src/utils/: logger.h
tests/: CMakeLists.txt
